# PixGlot

./: .clang-tidy  README.md  meson.build  meson_options.txt
examples/: inspect.cpp  meson.build  perftest.cpp
pixglot/: meson.build
pixglot/include/: meson.build
pixglot/include/pixglot/: buffer.hpp  codecs-magic.hpp  codecs.hpp  conversions.hpp  decode.hpp  exception.hpp  frame-source-info.hpp  frame.hpp  gl-texture.hpp  image.hpp  input-plane-info.hpp  metadata.hpp  output-format.hpp  pixel-buffer.hpp  pixel-format-conversion.hpp  pixel-format.hpp  pixel-storage.hpp  preference.hpp  progress-token.hpp  reader.hpp  square-isometry.hpp
pixglot/include/pixglot/details/: decoder.hpp  exif.hpp  hermit.hpp  int_cast.hpp  no-pixels.hpp  string-bytes.hpp  tiff-orientation.hpp  xmp.hpp
pixglot/include/pixglot/utils/: cast.hpp  gl.hpp  int_cast.hpp
pixglot/src/: codecs.cpp  conversions-cpu-endian.cpp  conversions-cpu-orientation.cpp  conversions-cpu-pixel-format.cpp  conversions-cpu.cpp  conversions-gl.cpp  conversions-no-cpu.cpp  conversions.cpp  convert-color-space.cpp  convert-endian.cpp  convert-orientation.cpp  convert-storage.cpp  decode.cpp  decoder.cpp  decoder.hpp  frame-source-info.cpp  frame.cpp  gl-texture.cpp  image.cpp  input-plane-info.cpp  metadata.cpp  output-format.cpp  pixel-buffer.cpp  pixel-format.cpp  progress-token.cpp  reader.cpp  square-isometry.cpp  strings.cpp
pixglot/src/codecs/: avif.cpp  exr.cpp  gif.cpp  jpeg.cpp  jxl.cpp  png.cpp  ppm.cpp  webp.cpp
pixglot/src/metadata/: exif-string-generator.cpp  exif-tag-names.txt  exif.cpp  xmp.cpp
tests/: common.hpp  meson.build  pixel-buffer.cpp  pixel-format.cpp  ppm.cpp  progress-token.cpp  readme.cpp  square-isometry.cpp
tests/samples/: P1.pbm  P2.pgm
