headers = [
  'pixglot/buffer.hpp',
  'pixglot/codecs.hpp',
  'pixglot/codecs-magic.hpp',
  'pixglot/conversions.hpp',
  'pixglot/decode.hpp',
  'pixglot/exception.hpp',
  'pixglot/frame.hpp',
  'pixglot/gl-texture.hpp',
  'pixglot/image.hpp',
  'pixglot/input-plane-info.hpp',
  'pixglot/output-format.hpp',
  'pixglot/pixel-buffer.hpp',
  'pixglot/pixel-format-conversion.hpp',
  'pixglot/pixel-format.hpp',
  'pixglot/preference.hpp',
  'pixglot/progress-token.hpp',
  'pixglot/reader.hpp',
  'pixglot/square-isometry.hpp',
  'pixglot/utils/cast.hpp',
  'pixglot/utils/gl.hpp',
]



install_headers(
  headers,
  preserve_path: true
)
