headers = [
  'pixglot/buffer.hpp',
  'pixglot/codecs.hpp',
  'pixglot/codecs-magic.hpp',
  'pixglot/conversions.hpp',
  'pixglot/decode.hpp',
  'pixglot/exception.hpp',
  'pixglot/frame.hpp',
  'pixglot/frame-source-info.hpp',
  'pixglot/gl-texture.hpp',
  'pixglot/image.hpp',
  'pixglot/metadata.hpp',
  'pixglot/output-format.hpp',
  'pixglot/pixel-buffer.hpp',
  'pixglot/pixel-format-conversion.hpp',
  'pixglot/pixel-format.hpp',
  'pixglot/preference.hpp',
  'pixglot/progress-token.hpp',
  'pixglot/reader.hpp',
  'pixglot/square-isometry.hpp',
  'pixglot/utils/cast.hpp',
  'pixglot/utils/gl.hpp',
  'pixglot/utils/int_cast.hpp',
]



install_headers(
  headers,
  preserve_path: true
)
